--- a/front/src/components/PageContainer/pageContainerStyles.scss
+++ b/front/src/components/PageContainer/pageContainerStyles.scss
@@ -27,5 +27,6 @@
 @media (max-width: 767px) { /* This targets mobile screens */
     .page-container {
       padding-bottom: 4rem !important;
+      padding-top: 5rem !important;
     } 
   }
